--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1 *ngIf="user$ | async">Elite Bank - {{ (user$ | async).email }} - {{ (user$ | async).name }}</h1>
-
-<router-outlet></router-outlet>
+<!-- <h1 *ngIf="user$ | async">Elite Bank - {{ (user$ | async).email }} - {{ (user$ | async).name }}</h1> -->
+<app-login></app-login>
+<!-- <router-outlet></router-outlet> -->
