--- a/src/app/auth/header/header.component.html
+++ b/src/app/auth/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<header class="header">
     <div class="header-container">
         <picture class="logo">
             Elite Bank
@@ -7,4 +7,4 @@
             Ligue no telefone 0800-000-1100 | Suporte ao cliente
         </div>
     </div>
-</div>
+</header>
