--- a/src/app/auth/header/header.component.scss
+++ b/src/app/auth/header/header.component.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 70px;
+    height: 10%;
     display: flex;
     // width: 1200px;
     justify-content: center;
@@ -15,5 +15,11 @@
         > .logo {
             color: white;
         }
+    }
+}
+
+@media screen and (max-height: 530px), screen and (max-width: 1000px) {
+    .header {
+        margin-bottom: 20px;
     }
 }
