--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -51,7 +51,7 @@
                     <div class="form-group">
                         <div class="control-numbers">
                             <div class="numbers" *ngFor="let randomNumber of randomNumbers">
-                                <button class="btn btn-primary" (click)="addPasswordNumber(randomNumber)">{{randomNumber.firstNumber}} ou {{randomNumber.secondNumber}}</button>                                
+                                <button class="btn btn-primary" (click)="addPasswordNumber(randomNumber)">{{randomNumber[0]}} ou {{randomNumber[1]}}</button>                                
                             </div>
                             <div class="numbers">
                                 <button class="btnDelete btn btn-primary" (click)="deletePassword()">DEL</button>
@@ -59,11 +59,16 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button class="btnSubmit btn btn-primary" (click)="login()">Enviar</button>
-                        <small class="forgot-password">Esqueceu sua senha? <br><a href="password/forgot">Clique aqui</a> para redefinir.</small>
+                        <div class="submit-number">
+                            <div class="numbers">
+                                <button class="btnSubmit btn btn-primary" (click)="login()">Enviar</button>
+                            </div>
+                            <small class="forgot-password">Esqueceu sua senha? <br><a href="password/forgot">Clique aqui</a> para redefinir.</small>
+                        </div>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <app-footer></app-footer>
 </div>
