generalizar rota para api

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button class="btnSubmit btn btn-primary">Enviar</button>
+                        <button class="btnSubmit btn btn-primary" (click)="login()">Enviar</button>
                         <small class="forgot-password">Esqueceu sua senha? <br><a href="password/forgot">Clique aqui</a> para redefinir.</small>
                     </div>
                     <!-- <div class="form-group">
