--- a/src/app/auth/footer/footer.component.scss
+++ b/src/app/auth/footer/footer.component.scss
@@ -8,8 +8,13 @@
     color: white;
 }
 
+a {
+    color: inherit;
+}
+
 @media screen and (max-height: 530px), screen and (max-width: 1000px) {
     .footer {
         margin-top: 20px;
+        height: 60px;
     }
 }
