--- a/src/app/auth/header/header.component.scss
+++ b/src/app/auth/header/header.component.scss
@@ -11,9 +11,31 @@
         width: 1200px;
         padding-left: 50px;
         padding-right: 50px;
+        align-items: center;
 
         > .logo {
             color: white;
+            width: 55px;
+        }
+
+        img {
+            width: inherit;
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .header {
+        > .header-container {
+            flex-direction: column;
+            // align-items: center;
+            width: initial;
+            padding-left: initial;
+            padding-right: initial;
+
+            > .logo {
+                margin-bottom: 10px;
+            }
         }
     }
 }
@@ -21,5 +43,6 @@
 @media screen and (max-height: 530px), screen and (max-width: 1000px) {
     .header {
         margin-bottom: 20px;
+        height: 120px;
     }
 }
