Adicionando mensagem de erro

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -59,6 +59,10 @@
             .form-login {
                 padding: 10px 22px;
             }
+
+            .alert {
+                margin-top: -30px;
+            }
             
             .form-group {
                 display: flex;
