--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,6 +19,9 @@
                     </div>
                 </nav>
                 <form class="form-login" #formLogin="ngForm">
+                    <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+                        {{errorMessage}}
+                    </div>
                     <div class="form-group">
                         <div class="input-group">
                             <input placeholder="Digite sua conta"
