--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,9 +5,9 @@
             <div class="info-container">
                 <h1>SAIBA COMO USAR</h1>
     
-                <p>Em seu primeiro acesso crie um Usuário e uma Senha Internet na opção CADASTRAR. Os dados (nome, CPF e data de nascimento) devem ser informados conforme cadastro na Receita Federal. Dessa forma você estará apto para consultar saldo, extrato da conta ou extrato de compras com cartão de débito.</p>
-                <p>Para realizar transações financeiras é necessário cadastrar a assinatura eletrônica e o dispositivo a ser utilizado.</p>
-                <p>A assinatura eletrônica pode ser cadastrada no próprio Internet Banking CAIXA na opção Configurar Acesso > Consultar contas, caso o cartão da sua conta possua chip. Após o cadastramento você deve desbloqueá-la em um de nossos Caixas Eletrônicos, na opção Outros Serviços > Outros Serviços > Senhas e validações de acesso > Desbloqueio de assinatura eletrônica.</p>
+                <p>Em seu primeiro acesso crie um usuário (conta) e uma senha Internet Banking na opção CADASTRO. Os dados (nome, CPF e data de nascimento) devem ser informados conforme cadastro na Receita Federal. Dessa forma você estará apto para realizar transferência, visualizar extrato e muitos mais.</p>
+                <p>A senha é composta por 6 dígitos numéricos e a conta é criada automaticamente no seu primeiro acesso.</p>
+                <p>Caso tenha esquecido sua senha, basta digitar seu usuário e clicar na opção Esqueceu sua senha, para que um link seja enviado ao e-mail cadastrado para geração de nova senha.</p>
             </div>
             <div class="form-container">
                 <nav class="navbar navbar-light bg-light">
