--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,9 +14,9 @@
                     <div class="div-navbar -active">
                         <a class="navbar-brand" href="#">Login</a>
                     </div>
-                    <div class="div-navbar">
+                    <!-- <div class="div-navbar">
                         <a class="navbar-brand" href="#">Cadastro</a>
-                    </div>
+                    </div> -->
                 </nav>
                 <form class="form-login" #formLogin="ngForm">
                     <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
