--- a/src/app/logged/logged.component.html
+++ b/src/app/logged/logged.component.html
@@ -1,3 +1,3 @@
 <p>logged works!</p>
 
-<!-- <h1 *ngIf="user$ | async">Elite Bank - {{ (user$ | async).balance |  }} - {{ (user$ | async).name }}</h1> -->
+<h1 *ngIf="user$ | async">Elite Bank - {{ (user$ | async).balance | currency  }} - {{ (user$ | async).name }}</h1>
