--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -16,7 +16,8 @@
     align-items: center;
     // height: 80%;
     // http://contentools.com.br/wp-content/uploads/2016/03/men-mobile-gift-gadgets.jpg
-    background: url(https://www.mulhermagnetica.com.br/wp-content/uploads/2018/11/How-to-Use-Texting-for-Your-Small-Business-.jpg) no-repeat center top fixed;
+    // https://www.mulhermagnetica.com.br/wp-content/uploads/2018/11/How-to-Use-Texting-for-Your-Small-Business-.jpg
+    background: url('../../../assets/img/LoginImage.jpg') no-repeat center top fixed;
     background-size: cover;
     box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.2);
 
