--- a/src/app/logged/logged.component.html
+++ b/src/app/logged/logged.component.html
@@ -1,3 +1,6 @@
-<p>logged works!</p>
-
+<app-header></app-header>
+<app-menu></app-menu>
+<!-- <a routerLink="/logged/home">Home</a> -->
+<!-- <button (click)="send()"></button> -->
+<router-outlet></router-outlet>
 <!-- <h1 *ngIf="user$ | async">Elite Bank - {{ (user$ | async).balance  }} - {{ (user$ | async).name }}</h1> -->
