--- a/src/app/logged/logged.component.html
+++ b/src/app/logged/logged.component.html
@@ -1,3 +1,4 @@
 <p>logged works!</p>
+<button class="btn btn-danger" (click)="logout()">Sair</button>
 
 <!-- <h1 *ngIf="user$ | async">Elite Bank - {{ (user$ | async).balance  }} - {{ (user$ | async).name }}</h1> -->
