--- a/src/app/logged/extract/extract.component.html
+++ b/src/app/logged/extract/extract.component.html
@@ -1,1 +1,23 @@
-{{this.extractAccount}}
+
+<table *ngIf="extractAccount" class="table">
+    <thead>
+        <tr>
+            <th>Data</th>
+            <th>Conta de origem</th>
+            <th>Conta de destino</th>
+            <th>Valor</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let extract of extractAccount">
+            <td>{{ extract?.insertedAt | date: 'dd/MM/yyy' }}</td>
+            <td>{{ extract?.origin }}</td>
+            <td>{{ extract?.destination }}</td>
+            <td [ngClass]="{'text-danger': extract?.origin == accountNumber,
+                            'text-success': extract?.origin != accountNumber}">
+                {{ extract?.value }}
+            </td>
+        </tr>
+    </tbody>
+
+</table>
