--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,14 +1,7 @@
-<div class="image-container">
+<div class="login-wrapper">
     <app-header></app-header>
     <div class="login-container">
         <div class="content-container">
-            <div class="info-container">
-                <h1>SAIBA COMO USAR</h1>
-    
-                <p>Em seu primeiro acesso crie um usuário (conta) e uma senha Internet Banking na opção CADASTRO. Os dados (nome, CPF e data de nascimento) devem ser informados conforme cadastro na Receita Federal. Dessa forma você estará apto para realizar transferência, visualizar extrato e muitos mais.</p>
-                <p>A senha é composta por 6 dígitos numéricos e a conta é criada automaticamente no seu primeiro acesso.</p>
-                <p>Caso tenha esquecido sua senha, basta digitar seu usuário e clicar na opção Esqueceu sua senha, para que um link seja enviado ao e-mail cadastrado para geração de nova senha.</p>
-            </div>
             <div class="form-container">
                 <nav class="navbar navbar-light bg-light">
                     <div class="div-navbar -active">
@@ -25,6 +18,15 @@
                     (loginEvent)="login()">
                 </app-form-authentication>
             </div>
+        </div>
+    </div>
+    <div class="info-container">
+        <div class="info-content">
+            <h1>SAIBA COMO USAR</h1>
+    
+            <p>Para acessar o internet banking do Elite Banking basta inserir sua conta e a senha cadastradado em um de nossos caixa eletrônicos.</p>
+            <p>A senha é composta por 6 dígitos numéricos e a conta é criada automaticamente em um de nossos caixas.</p>
+            <p>Caso tenha esquecido sua senha, basta digitar seu usuário e clicar na opção Esqueceu sua senha, para que um link seja enviado ao e-mail cadastrado para geração de nova senha.</p>
         </div>
     </div>
     <app-footer></app-footer>
