criação de módulo para reutilização de componentes

--- a/src/app/logged/transfer/transfer.component.html
+++ b/src/app/logged/transfer/transfer.component.html
@@ -57,11 +57,11 @@
           </div>
         </form>
         </div>
-        <app-form-authentication
-                    [dataLoading]="dataLoading"
-                    [errorMessage]="errorMessage"
-                    [loginData]="loginData">
-                </app-form-authentication>
+        <app-form-authentication class="col-md-12 col-sm-12"
+            [dataLoading]="dataLoading"
+            [errorMessage]="errorMessage"
+            [loginData]="loginData">
+        </app-form-authentication>
       </div>
     </div>
   </div>
