--- a/src/app/logged/menu/menu.component.html
+++ b/src/app/logged/menu/menu.component.html
@@ -11,5 +11,11 @@
                 <div class="item-link">{{ link.name }}</div>
             </a>
         </div>
+        <div>
+            <div [ngStyle]="{'border-bottom': '1px solid #c6c6c6'}"></div>
+        </div>
+        <div>
+            <div class="item-link text-white" [ngStyle]="{'cursor': 'pointer'}" (click)="logout()">Sair</div>
+        </div>
     </nav>
 </nav>
