correção validação lista de extrstos

--- a/src/app/logged/menu/menu.component.html
+++ b/src/app/logged/menu/menu.component.html
@@ -3,7 +3,7 @@
         EliteBanking
     </div>
     <div class="user-info">
-        Olá, {{ (user$ | async).name }}
+        Olá, {{ (user$ | async)?.name }}
     </div>
     <nav class="menu-links">
         <div *ngFor="let link of menuLinks">
