saldo do extrato

--- a/src/app/logged/extract/extract.component.html
+++ b/src/app/logged/extract/extract.component.html
@@ -18,6 +18,10 @@
                 {{ extract?.value }}
             </td>
         </tr>
+        <tr>
+            <th colspan="3">Total</th>
+            <th>{{ saldo }}</th>
+        </tr>
     </tbody>
 
 </table>
