--- a/src/app/logged/extract/extract.component.html
+++ b/src/app/logged/extract/extract.component.html
@@ -6,6 +6,7 @@
             <th>Conta de origem</th>
             <th>Conta de destino</th>
             <th>Valor</th>
+            <th>Saldo</th>
         </tr>
     </thead>
     <tbody>
@@ -15,12 +16,10 @@
             <td>{{ extract?.destination }}</td>
             <td [ngClass]="{'text-danger': extract?.origin == accountNumber,
                             'text-success': extract?.origin != accountNumber}">
-                {{ extract?.value }}
+                {{ extract?.value | currency }}
             </td>
-        </tr>
-        <tr>
-            <th colspan="3">Total</th>
-            <th>{{ saldo }}</th>
+            <td *ngIf= "extract?.origin == accountNumber"> {{ extract?.preOriginBalance | currency }}</td>
+            <td *ngIf= "extract?.origin != accountNumber"> {{ extract?.preDestinationBalance | currency }}</td>
         </tr>
     </tbody>
 
