Adicionando autenticação na tela de transferências

--- a/src/app/reuse-component/form-authentication/form-authentication.component.scss
+++ b/src/app/reuse-component/form-authentication/form-authentication.component.scss
@@ -48,6 +48,14 @@
         height: 45px;
         margin: 0px 0px 12px 0px;
     }
+
+    .logged {
+        width: 30%;
+    }
+
+    .loggedSubmit {
+        width: 100%;
+    }
     
     .btn {
         width: 100%;
