--- a/src/app/logged/transfer/transfer.component.html
+++ b/src/app/logged/transfer/transfer.component.html
@@ -52,7 +52,7 @@
                 </select>
               </div>
               <div class="form-group col-sm-12">
-                <button (click)="transfer()" type="button" class="btn btn-primary btn-block">Enviar</button>
+                <button data-toggle="modal" data-target="#myModal" type="button" class="btn btn-primary btn-block">Enviar</button>
               </div>
             </div>
           </div>
@@ -62,3 +62,29 @@
     </div>
   </div>
 </section>
+
+  <!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        
+          <!-- Modal Header -->
+          <div class="modal-header">
+            <h4 class="modal-title">Confirmação de senha</h4>
+            <button type="button" class="close" data-dismiss="modal" #closeBtn>&times;</button>
+          </div>
+          <div class="modal-body">
+              <app-form-authentication
+                    [dataLoading]="dataLoading"
+                    [errorMessage]="errorMessage"
+                    [loginData]="loginData"
+                    [logged]="true"
+                    (loginEvent)="transfer()">
+                </app-form-authentication>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+          </div>
+        </div>
+    </div>
+</div>
