--- a/src/app/reuse-component/form-authentication/form-authentication.component.html
+++ b/src/app/reuse-component/form-authentication/form-authentication.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
         {{errorMessage}}
     </div>
-    <div class="form-group">
+    <div *ngIf="!logged" class="form-group">
         <div class="input-group">
             <input placeholder="Digite sua conta"
                    type="text"
@@ -39,25 +39,25 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="control-numbers">
-            <div class="numbers" *ngFor="let randomNumber of randomNumbers">
+        <div class="control-numbers" [ngClass]="{ loggedSubmit: logged }">
+            <div class="numbers" *ngFor="let randomNumber of randomNumbers" [ngClass]="{ logged: logged }">
                 <button class="btn btn-primary" (click)="addPasswordNumber(randomNumber)">{{randomNumber[0]}} ou {{randomNumber[1]}}</button>                                
             </div>
-            <div class="numbers">
+            <div class="numbers" [ngClass]="{ logged: logged }">
                 <button class="btnDelete btn btn-primary" (click)="deletePassword()">DEL</button>
             </div>
         </div>
     </div>
     <div class="form-group">
         <div class="submit-number">
-            <div class="numbers">
+            <div class="numbers" [ngClass]="{ loggedSubmit: logged }">
                 <button *ngIf="!dataLoading" class="btnSubmit btn btn-primary" (click)="login()" [disabled]="formLogin.invalid">Enviar</button>
                 <button *ngIf="dataLoading" class="btnSubmit btn btn-primary">
                     <span class="spinner-border spinner-border-sm"></span>
                         <!-- Enviando... -->
                 </button>
             </div>
-            <small class="forgot-password">Esqueceu sua senha? <br><a href="#">Clique aqui</a> para redefinir.</small>
+            <small *ngIf="!logged" class="forgot-password">Esqueceu sua senha? <br><a href="#">Clique aqui</a> para redefinir.</small>
         </div>
     </div>
 </form>
