--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,11 +22,11 @@
     </div>
     <div class="info-container">
         <div class="info-content">
-            <h1>SAIBA COMO USAR</h1>
-    
-            <p>Para acessar o internet banking do Elite Banking basta inserir sua conta e a senha cadastradado em um de nossos caixa eletrônicos.</p>
-            <p>A senha é composta por 6 dígitos numéricos e a conta é criada automaticamente em um de nossos caixas.</p>
-            <p>Caso tenha esquecido sua senha, basta digitar seu usuário e clicar na opção Esqueceu sua senha, para que um link seja enviado ao e-mail cadastrado para geração de nova senha.</p>
+            <h1 class="text-title">SAIBA COMO USAR</h1>
+
+            <p class="text-info-container">Para acessar o internet banking do Elite Banking basta inserir sua conta e a senha cadastradado em um de nossos caixa eletrônicos.</p>
+            <p class="text-info-container">A senha é composta por 6 dígitos numéricos e a conta é criada automaticamente em um de nossos caixas.</p>
+            <p class="text-info-container">Caso tenha esquecido sua senha, basta digitar seu usuário e clicar na opção Esqueceu sua senha, para que um link seja enviado ao e-mail cadastrado para geração de nova senha.</p>
         </div>
     </div>
     <app-footer></app-footer>
