--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+*  {
+  font-family: 'Montserrat', sans-serif;
+}
 html, body {
-    height: 100%;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
 }
